fixed layout problem where skills with overflow to the right

--- a/src/components/skillsarea/SkillArea.module.css
+++ b/src/components/skillsarea/SkillArea.module.css
@@ -40,6 +40,4 @@
 .skillRow {
     display: flex;
     justify-content: flex-start;
-    padding-left: 32px;
-    margin-right: 32px;
 }
